<resources>
    <string name="app_name">MotorFreeRider</string>

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">登出</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">請輸入您的手機號碼</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">歡迎使用\nMotorFreeRider</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>
    <string name="ride_together">Ride Together</string>
    <string name="search">Search</string>
    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="return_map">首頁</string>
    <string name="information">共乘資訊</string>
    <string name="setting">設定</string>
    <string name="contact">聯絡我們</string>
    <string name="profile">個人資訊</string>
    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="title_activity_home">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_update_location">記事儲存的位置</string>
    <string name="message_update_location">更新或清除儲存的位置資訊?</string>
    <string name="update">更新</string>
    <string name="clear">清除</string>

    <string name="title_current_location">目前位置</string>
    <string name="message_current_location">是否儲存目前位置?</string>

    <string name="google_play_service_missing">裝置沒有安裝Google Play服務</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="word">留言</string>
    <string name="action_settings">Settings</string>
    <string name="owner_name">車主姓名</string>
    <string name="car_number">車牌號碼</string>
    <string name="search_cate">搜尋方式</string>
    <string name="hint">請輸入車主姓名</string>
    <string name="search_send">送出</string>
    <string name="test">測試區</string>
    <string name="clientTest">Client端測試</string>
    <string name="passenger">乘客</string>
    <string name="owner">車主</string>
    <string name="ident_cate">選擇身分</string>
    <string name="last_name">姓氏</string>
    <string name="first_name">名字</string>
    <string name="hint_lastName">請輸入您的姓氏</string>
    <string name="hint_firstName">請輸入您的名字</string>
    <string name="Phone">手機</string>
    <string name="wantToDrive">我想載客</string>
    <string name="title_activity_profile">ProfileActivity</string>
</resources>