<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/return_map" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/profile"/>
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/information" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_change"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="變更身分" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_signOut"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/sign_out" />
    </group>

</menu>
