<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    android:orientation="vertical"
    tools:context="com.example.motorfreerider.SearchActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/search_cate"
                    android:theme="@style/ThemeOverlay.Search" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/group_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/owner"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onSelect"
                    android:text="@string/owner_name"
                    android:theme="@style/ThemeOverlay.Search_Button" />

                <RadioButton
                    android:id="@+id/number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onSelect"
                    android:text="@string/car_number"
                    android:theme="@style/ThemeOverlay.Search_Button" />

            </RadioGroup>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="text" />

        </RelativeLayout>

        <Button
            android:id="@+id/search_send"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:background="#CCCCFF"
            android:text="@string/search_send" />
    </LinearLayout>
</LinearLayout>

