<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_100"
    tools:context="com.example.motorfreerider.chooseIdentity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="您是第一次使用此APP的用戶\n\n必須填完下列的表格才可以繼續"
            android:layout_marginBottom="30dp"
            android:theme="@style/ThemeOverlay.MyFirstText"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/inputLastName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/last_name"
                    android:theme="@style/ThemeOverlay.Search" />
            </LinearLayout>

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/hint_lastName"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/inputFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/first_name"
                    android:theme="@style/ThemeOverlay.Search" />
            </LinearLayout>

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/hint_firstName"
                android:inputType="text" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/inputSex"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="7dp"
                    android:text="性別"
                    android:theme="@style/ThemeOverlay.Search" />
            </LinearLayout>
            <RadioGroup
                android:id="@+id/group_radio_Sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/identity"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:onClick="onSelect"
                    android:text="男性"
                    android:theme="@style/ThemeOverlay.Search_Button" />


                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:onClick="onSelect"
                    android:text="女性"
                    android:theme="@style/ThemeOverlay.Search_Button" />
            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/inputPhone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="7dp"
                    android:text="@string/Phone"
                    android:theme="@style/ThemeOverlay.Search" />
            </LinearLayout>

            <EditText
                android:id="@+id/MobileNumber"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="@string/hint_phone_number"
                android:inputType="phone" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/ident_cate"
                    android:theme="@style/ThemeOverlay.Search" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/group_radio_identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/identity"
                android:orientation="horizontal">


                <RadioButton
                    android:id="@+id/passenger"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:onClick="onSelect"
                    android:text="@string/passenger"
                    android:theme="@style/ThemeOverlay.Search_Button" />


                <RadioButton
                    android:id="@+id/owner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:onClick="onSelect"
                    android:text="@string/owner"
                    android:theme="@style/ThemeOverlay.Search_Button" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/CarALL"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/inputCar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="7dp"
                    android:text="車型"
                    android:theme="@style/ThemeOverlay.Search" />
            </LinearLayout>

            <EditText
                android:id="@+id/CarType"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="請輸入您的車型"
                android:inputType="text" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/CarNumberALL"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/inputCarNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="7dp"
                    android:text="車牌號碼"
                    android:theme="@style/ThemeOverlay.Search" />
            </LinearLayout>

            <EditText
                android:id="@+id/CarNumber"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:hint="請輸入您的車牌號碼"
                android:inputType="text" />
        </LinearLayout>
        <Button
            android:id="@+id/first_send"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="10dp"
            android:background="#CCCCFF"
            android:text="@string/search_send" />
    </LinearLayout>
</LinearLayout>
